--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HarmadikProject">
-        <activity android:name=".Megrendeles"></activity>
+        <activity android:name=".MainActivity3"></activity>
+        <activity android:name=".MainActivity2" />
+        <activity android:name=".Megrendeles" />
         <activity android:name=".Alkohol" />
         <activity android:name=".MainActivity">
             <intent-filter>
